# paperpulse

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
backend/: pyproject.toml
backend/paperpulse/: __init__.py  config.py  logging_setup.py  main.py  paths.py  scheduler.py
backend/paperpulse/api/: authors.py  feed.py  filter_settings.py  hello.py  institutions.py  router.py  settings.py
backend/paperpulse/db/: __init__.py  duckdb_client.py  lance_client.py  schema.sql
backend/paperpulse/entity/: affiliation_pipeline.py  ar5iv.py  author.py  institution.py  openalex.py  ror.py
backend/paperpulse/filter/: __init__.py  anchors.py  embedding.py  keywords.py  pipeline.py  semantic.py  simulate.py  tiers.py  vectors_store.py
backend/paperpulse/ingest/: arxiv.py  base.py  dedup.py  nber.py  runner.py
backend/tests/: conftest.py
backend/tests/fixtures/: bge_m3_stub.py
backend/tests/fixtures/ar5iv/: paper_bloomberggpt.html
backend/tests/fixtures/arxiv/: sample_response.xml
backend/tests/integration/: test_affiliation_pipeline.py  test_api_endpoints.py  test_feed_api.py  test_filter_settings_api.py  test_ingest_end_to_end.py  test_ingest_filter_integration.py  test_inst_author_api.py  test_l2_pipeline.py  test_l3_pipeline.py
backend/tests/unit/: test_ar5iv.py  test_arxiv_source.py  test_author_normalize.py  test_config.py  test_db_schema.py  test_dedup.py  test_institution_normalize.py  test_logging.py  test_nber_source.py  test_openalex.py  test_ror_loader.py
(+112 files in other folders)
