[project]
name = "paperpulse-backend"
version = "0.1.0"
description = "PaperPulse Python sidecar"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "watchdog>=5.0.3",
    "duckdb>=1.1.1",
    "lancedb>=0.13.0",
    "pyarrow>=17.0.0",
    "rapidfuzz>=3.10.0",
    "arxiv>=2.1.3",
    "feedparser>=6.0.11",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "responses>=0.25.3",
    "respx>=0.21.1",
    "types-PyYAML>=6.0.12",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["paperpulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
